--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <table>
         <tr>
             <td>
-                <img src="/Users/stevenperez/Desktop/Web Development/HTML - Personal Site/Images/Steven.png" alt="Picture of me!" width="175" height="175">
+                <img src="images/steven.png" alt="Picture of me!" width="175" height="175">
             </td>
             <td>
                 <h1>Steven Perez</h1>
